Inclui img Pizza

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li>Item 2</li>
         <li>Item 3</li>
         <li>Item 4</li>
+     
 
     </ol>
 
@@ -41,11 +42,13 @@
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
     </ul>
 
     <img src="https://s2-techtudo.glbimg.com/CDCDKUhS0FMmWH6daMavnixT6cg=/0x0:1024x609/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2022/c/u/15eppqSmeTdHkoAKM0Uw/dall-e-2.jpg" width="400px" alt="Monalisa quadro">
     <img src="img/img-lente.webp" width="400px" alt="Lente">
-
+    <img src="img/pexels-vincent-rivaud-2147491.jpg" width="400px" alt="Pizza"
 
 <!-- para voltar uma pasta ../ subir uma pasta  -->
 
