--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="pt-br">
 
 <head>
-    <!-- Isto é um comentário -->
+    <p>Isto é um <b>comentário</b></p>
     <meta charset="UTF-8">
     <title>Primeiro Documento HTML</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
 
 </head>
 
@@ -31,12 +29,12 @@
         <li>Item 2</li>
         <li>Item 3</li>
         <li>Item 4</li>
-     
+
 
     </ol>
 
     <h2>Lista Desordenada</h2>
- <!-- para criar uma lista desordenada ul automática com uma lista com elementos digita ul>li*3  -->
+    <!-- para criar uma lista desordenada ul automática com uma lista com elementos digita ul>li*3  -->
 
     <ul>
         <li>Item 1</li>
@@ -46,15 +44,84 @@
         <li>Item 5</li>
     </ul>
 
-    <img src="https://s2-techtudo.glbimg.com/CDCDKUhS0FMmWH6daMavnixT6cg=/0x0:1024x609/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2022/c/u/15eppqSmeTdHkoAKM0Uw/dall-e-2.jpg" width="400px" alt="Monalisa quadro">
-    <img src="img/img-lente.webp" width="400px" alt="Lente">
-    <img src="img/pexels-vincent-rivaud-2147491.jpg" width="400px" alt="Pizza"
+    <img src="https://s2-techtudo.glbimg.com/CDCDKUhS0FMmWH6daMavnixT6cg=/0x0:1024x609/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2022/c/u/15eppqSmeTdHkoAKM0Uw/dall-e-2.jpg"
+        width="100px" alt="Monalisa quadro">
+    <img src="img/img-lente.webp" width="100px" alt="Lente">
+    <img src="img/pexels-vincent-rivaud-2147491.jpg" width="100px" alt="Pizza" <!-- para voltar uma pasta ../ subir uma
+        pasta -->
 
-<!-- para voltar uma pasta ../ subir uma pasta  -->
+    <p> A tag <b> b</b> ou a tag <strong>strong</strong> passam relevância para uma determinada palavra ou parte do
+        texto</p>
 
+    <h2>Tabelas</h2>
 
+    <table border="1px">
+        <tr>
+            <th>Nome</th>
+            <th>Cidade</th>
+            <th>Nascimento</th>
+            <th>Mãe</th>
+            <td rowspan="4">Albaniza</td>
+        </tr>
+        <tr>
+            <td>JONATAS</td>
+            <td>SAO PAULO</td>
+            <td>BRASIL</td>
+            <td>Albaniza Diniz</td>
+        </tr>
+        <tr>
+            <td>JANAINA</td>
+            <td>RIO DE JANEIRO</td>
+            <td>CHILE</td>
+            <td>Albaniza Diniz</td>
+        </tr>
+        <td colspan="4">Verifique se os dados </td>
 
+        </tr>
 
+    </table>
+
+    <h2>Tabela Preço Carros</h2>
+
+    <table border="1px">
+        <tr>
+
+            <td>Marca:</td>
+            <td>Modelo:</td>
+            <td>Ano:</td>
+            <td>Valor:</td>
+        </tr>
+        <tr>
+            <th>Volswagen</th>
+            <th>Golf</th>
+            <th>2009</th>
+            <th>R$38.500</th>
+        </tr>
+        <tr>
+            <th>Fiat</th>
+            <th>Palio</th>
+            <th>2010</th>
+            <th>R$19.700</th>
+        </tr>
+        <tr>
+            <th>Honda</th>
+            <th>Civic</th>
+            <th>2012</th>
+            <th>R$61.500</th>
+
+        </tr>
+
+        <td colspan="4">O melhor preço da região </td>
+    </table>
+
+    <h2>Formulários</h2>
+
+    <form action="">
+        <label for="nome">Nome</label><br>
+        <input id="nome" type="text"><br>
+        <label for="">Idade</label><br>
+        <input type="number">
+    </form>
 
 </body>
 
