Inserimos checkbox ao formulário

--- a/index.html
+++ b/index.html
@@ -121,6 +121,24 @@
         <input id="nome" type="text"><br>
         <label for="">Idade</label><br>
         <input type="number">
+        <br>
+        <br>
+
+        <input type="radio" id="html" name="tec" value="HTML">
+        <label for="html">HTML</label><br>
+        <input type="radio" id="css" name="tec" value="CSS">
+        <label for="css">CSS</label><br>
+        <input type="radio" id="javascript" name="tec" value="JavaScript">
+        <label for="javascript">JavaScript</label><br>
+        <br>
+        <br>
+
+        <input type="checkbox" name="resp" id="resp" value="Respiratória">
+        <label for="resp">Doença Respiratória</label><br>
+        <input type="checkbox" name="card" id="card" value="Cardiaca">
+        <label for="card">Doença Cardíaca</label><br>
+        <input type="checkbox" name="ossea" id="ossea" value="Óssea">
+        <label for="ossea">Doença Óssea</label><br>
     </form>
 
 </body>
